--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,38 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  max-width: 100%;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+  font-family: 'Playfair Display', serif;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.App {
+  position: relative;
+  margin: 0;
+  padding: 0;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.footer-container {
+  position: relative;
+  min-height: calc(100vh - 100px)
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+
+@media screen and (max-width: 600px) {
+  #root {
+    min-height: 40vw;
+    width: auto;
+    margin: 0;
+    padding: 0;
   }
 }
 
-.card {
-  padding: 2em;
+::-webkit-scrollbar {
+  width: 8px;
+  background-color: #f5f5f500;
 }
 
-.read-the-docs {
-  color: #888;
+::-webkit-scrollbar-thumb {
+  background-color: #000000;
+  border-radius: 10px;
 }
