feat: conexão com o backend realizada

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -10,7 +10,7 @@
   }
 }
 
-.form-login {
+.App {
   background-image: linear-gradient(-135deg,  #171d41fb, #181a56, #141247, #0d3543, #082b23);
   background-size: 400% 400%;
   max-width: 100vw;
