--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -10,5 +10,6 @@
 .button {
     font-size: 24px;
     font-weight: 900;
-    text-shadow: 1px 1px 2px black
+    text-shadow: 1px 1px 2px black;
+    font-family:monospace
 }
