--- a/src/styles/Analytics.css
+++ b/src/styles/Analytics.css
@@ -9,3 +9,9 @@
     padding: 40px;
     box-shadow: 15px 23px 9px -3px rgba(0, 0, 0, 0.712),0px 10px 15px -3px rgba(0, 0, 0, 0.531);
 }
+
+.analytics-container {
+    width: 90vw;
+    height: 90vh;
+    background-color: white;
+}
