--- a/src/styles/Analytics.css
+++ b/src/styles/Analytics.css
@@ -11,7 +11,17 @@
 }
 
 .analytics-container {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 37px;
     width: 90vw;
     height: 90vh;
-    background-color: white;
+    background-color: rgba(18, 6, 94, 0);
+}
+
+.button-container {
+    margin-top: 20px;
+    font-size: 40px;
 }
