--- a/src/styles/Analytics.css
+++ b/src/styles/Analytics.css
@@ -10,6 +10,10 @@
     box-shadow: 15px 23px 9px -3px rgba(0, 0, 0, 0.712),0px 10px 15px -3px rgba(0, 0, 0, 0.531);
 }
 
+.analytics h1 {
+    text-shadow: 2px 2px 2px rgb(9, 104, 33);
+}
+
 .analytics-container {
     display: flex;
     text-align: center;
