--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -20,3 +20,17 @@
   justify-content: center;
   align-items: center;
 }
+
+@media screen and (max-width: 600px ) {
+  .App {
+    background-image: linear-gradient(-135deg,  #171d41fb, #181a56, #141247, #0d3543, #082b23);
+    background-size: 400% 400%;
+    width: 100vw;
+    max-width: 100vw;
+    min-height: 100vh;
+    animation: gradient 15s ease infinite;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
